--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:all": "react-scripts test --watchAll --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint ./",
     "lintFix": "eslint ./ --fix",
